That last checkin was bug 192522, r=alecf, sr=darin