intl/strres/src/nsStringBundle.cpp
@@ -840,4 +840,3 @@ done:
   return rv;
 }
 
-
