netwerk/protocol/file/src/nsFileChannel.cpp
@@ -605,3 +605,4 @@ nsFileChannel::OnTransportStatus(nsITransport *trans, nsresult status,
     }
     return NS_OK;
 }
+
